--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <title>Nature Trails</title>
     <link rel="stylesheet" href="assets/stylesheets/reset.css" />
     <link rel="stylesheet" href="assets/stylesheets/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <header>
-      <h2><span>Nature</span>Trails</h2>
-      <nav>
+      <h2>Nature<span>Trails</span></h2>
+      <nav class="desktop">
         <ul>
           <li>About Us</li>
           <li>Events</li>
@@ -18,6 +22,9 @@
           <li>Contact Us</li>
         </ul>
       </nav>
+      <div class="mobile">
+        <i class="fa fa-bars fa-lg"></i>
+      </div>
     </header>
   </body>
 </html>
