add banner section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <h2>Nature<span>Trails</span></h2>
+      <h3>Nature<span>Trails</span></h3>
       <nav class="desktop">
         <ul>
           <li>About Us</li>
@@ -26,5 +26,11 @@
         <i class="fa fa-bars fa-lg"></i>
       </div>
     </header>
+    <section class="banner">
+      <div class="content">
+        <h1>Nature Trails</h1>
+        <h4>Epic adventures await</h4>
+      </div>
+    </section>
   </body>
 </html>
