add testimonial section

--- a/index.html
+++ b/index.html
@@ -27,10 +27,46 @@
       </div>
     </header>
     <section class="banner">
+      <img src="assets/images/banner.jpg" alt="" />
       <div class="content">
         <h1>Nature Trails</h1>
         <h4>Epic adventures await</h4>
       </div>
+    </section>
+    <section class="testimonial">
+      <div class="image">
+        <img
+          src="assets/images/testimonial.jpg"
+          alt="man standing on a rock looking towards a lake"
+        />
+      </div>
+      <article id="one" class="card">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Id diam
+          vel quam elementum pulvinar etiam non quam. Tellus integer feugiat
+          scelerisque varius morbi enim.
+        </p>
+        <h6>&ndash; Adam Holt</h6>
+      </article>
+      <article id="two" class="card">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Id diam
+          vel quam elementum pulvinar etiam non quam. Tellus integer feugiat
+          scelerisque varius morbi enim.
+        </p>
+        <h6>&ndash; Adam Holt</h6>
+      </article>
+      <article id="three" class="card">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Id diam
+          vel quam elementum pulvinar etiam non quam. Tellus integer feugiat
+          scelerisque varius morbi enim.
+        </p>
+        <h6>&ndash; Adam Holt</h6>
+      </article>
     </section>
   </body>
 </html>
