--- a/index.html
+++ b/index.html
@@ -30,14 +30,36 @@
     </header>
     <section class="grid-container banner">
       <div class="image">
-          <img src="assets/images/banner.jpg" alt="" />
+        <img src="assets/images/banner.jpg" alt="" />
       </div>
       <div class="content flex-container">
         <h1>Nature Trails</h1>
         <h4>Epic adventures await</h4>
       </div>
     </section>
+    <section class="grid-container testimonial">
+      <h2>Our Members Speak</h2>
+      <article id="one" class="card flex-container">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Id diam
+          vel quam elementum pulvinar etiam non quam. Tellus integer feugiat
+          scelerisque varius morbi enim.
+        </p>
+        <h6>&ndash; Adam Holt</h6>
+      </article>
+      <article id="two" class="card flex-container">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Id diam
+          vel quam elementum pulvinar etiam non quam. Tellus integer feugiat
+          scelerisque varius morbi enim.
+        </p>
+        <h6>&ndash; James Mclean</h6>
+      </article>
+    </section>
     <section class="grid-container gallery">
+      <h2>Gallery</h2>
       <div id="left" class="photo">
         <img
           src="assets/images/gallery-left.jpg"
@@ -63,24 +85,10 @@
         />
       </div>
     </section>
-      <!-- <article id="one" class="card">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Id diam
-          vel quam elementum pulvinar etiam non quam. Tellus integer feugiat
-          scelerisque varius morbi enim.
-        </p>
-        <h6>&ndash; Adam Holt</h6>
-      </article>
-      <article id="two" class="card desktop">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Id diam
-          vel quam elementum pulvinar etiam non quam. Tellus integer feugiat
-          scelerisque varius morbi enim.
-        </p>
-        <h6>&ndash; James Mclean</h6>
-      </article>
+  </body>
+</html>
+
+<!--
       <article id="three" class="card">
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -90,6 +98,3 @@
         </p>
         <h6>&ndash; Liza Adams</h6>
       </article> -->
-    </section>
-  </body>
-</html>
