--- a/index.html
+++ b/index.html
@@ -34,26 +34,26 @@
       </div>
       <div class="content flex-container">
         <h1>Nature Trails</h1>
-        <h4>Epic adventures await</h4>
+        <h3>Epic adventures await</h3>
       </div>
     </section>
     <section class="grid-container testimonial">
       <h2>Our Members Speak</h2>
       <article id="one" class="card flex-container">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Id diam
           vel quam elementum pulvinar etiam non quam. Tellus integer feugiat
-          scelerisque varius morbi enim.
+          scelerisque varius morbi enim."
         </p>
         <h6>&ndash; Adam Holt</h6>
       </article>
       <article id="two" class="card flex-container">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Id diam
           vel quam elementum pulvinar etiam non quam. Tellus integer feugiat
-          scelerisque varius morbi enim.
+          scelerisque varius morbi enim."
         </p>
         <h6>&ndash; James Mclean</h6>
       </article>
@@ -85,16 +85,17 @@
         />
       </div>
     </section>
+    <section class="grid-container join-us">
+      <h2>Become a Member</h2>
+      <div class="events">
+        <img src="assets/images/adventure-sports.jpg" alt="" />
+        <img src="assets/images/camping-trip.jpg" alt="" />
+        <img src="assets/images/surfing.jpg" alt="" />
+      </div>
+      <div class="info">
+        <p>We offer various camps, trips, worksshops and more!</p>
+        <button class="btn" type="button">Join Us</button>
+      </div>
+    </section>
   </body>
 </html>
-
-<!--
-      <article id="three" class="card">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Id diam
-          vel quam elementum pulvinar etiam non quam. Tellus integer feugiat
-          scelerisque varius morbi enim.
-        </p>
-        <h6>&ndash; Liza Adams</h6>
-      </article> -->
