add footer content

--- a/index.html
+++ b/index.html
@@ -87,15 +87,28 @@
     </section>
     <section class="grid-container join-us">
       <h2>Become a Member</h2>
-      <div class="events">
+      <div class="flex-container events">
         <img src="assets/images/adventure-sports.jpg" alt="" />
         <img src="assets/images/camping-trip.jpg" alt="" />
         <img src="assets/images/surfing.jpg" alt="" />
-      </div>
-      <div class="info">
-        <p>We offer various camps, trips, worksshops and more!</p>
-        <button class="btn" type="button">Join Us</button>
+        <div class="flex-container info">
+          <p>We offer various camps, trips, worksshops and more!</p>
+          <button class="btn" type="button">Join Us</button>
+        </div>
       </div>
     </section>
+    <footer class="grid-container">
+      <div class="flex-container contact">
+        <h4>Nature Trails</h4>
+        <p>nature.trails@gmail.com</p>
+        <p>9832 2394 10</p>
+      </div>
+      <div class="flex-container copyright">
+        <p>&copy; Nature Trails 2020 | Website of a ficticious club</p>
+      </div>
+      <div class="flex-container credit">
+        <p>Designed and coded by Moreshwar</p>
+      </div>
+    </footer>
   </body>
 </html>
