add social media section in footer

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <h2>Become a Member</h2>
       <div class="flex-container events">
         <img src="assets/images/adventure-sports.jpg" alt="" />
-        <img src="assets/images/camping-trip.jpg" alt="" />
+        <img id="middle" src="assets/images/camping-trip.jpg" alt="" />
         <img src="assets/images/surfing.jpg" alt="" />
         <div class="flex-container info">
           <p>We offer various camps, trips, worksshops and more!</p>
@@ -102,6 +102,11 @@
         <h4>Nature Trails</h4>
         <p>nature.trails@gmail.com</p>
         <p>9832 2394 10</p>
+      </div>
+      <div class="flex-container social">
+        <i class="fa fa-facebook"></i>
+        <i class="fa fa-twitter"></i>
+        <i class="fa fa-instagram"></i>
       </div>
       <div class="flex-container copyright">
         <p>&copy; Nature Trails 2020 | Website of a ficticious club</p>
