--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <img id="middle" src="assets/images/camping-trip.jpg" alt="" />
         <img src="assets/images/surfing.jpg" alt="" />
         <div class="flex-container info">
-          <p>We offer various camps, trips, worksshops and more!</p>
+          <p>We offer various camps, trips, classes and more!</p>
           <button class="btn" type="button">Join Us</button>
         </div>
       </div>
