--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
     </section>
     <section class="grid-container testimonial">
-      <h2>Our Members Speak</h2>
+      <h2>Member Reviews</h2>
       <article id="one" class="card flex-container">
         <p>
           "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
