add credit to unsplash

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <p>&copy; Nature Trails 2020 | Website of a ficticious club</p>
       </div>
       <div class="flex-container credit">
-        <p>Designed and coded by Moreshwar</p>
+        <p>Pictures from Unsplash | Designed and coded by Moreshwar</p>
       </div>
     </footer>
   </body>
